# TK-Planes

./: .gitignore  README.md  pyproject.toml  run.sh
cameras/: cameras.py
data/: pixel_samplers.py
data/datamanagers/: base_datamanager.py
data/dataparsers/: okutama_dataparser.py
data/datasets/: base_dataset.py
data/utils/: data_utils.py  dataloaders.py
field_components/: encodings.py
kplanes/: LimitGradLayer.py  decoder.py  kplanes.py  kplanes.py~  kplanes_configs.py  kplanes_field.py  kplanes_field.py~
model_components/: ray_generators.py
models/: base_model.py
tkplanes/: tkplanes_data_config.py  tkplanes_method_config.py
tkplanes/data/: pixel_samplers.py
tkplanes/data/datamanagers/: base_datamanager.py
tkplanes/data/dataparsers/: okutama_dataparser.py
tkplanes/data/datasets/: base_dataset.py
tkplanes/field_components/: encodings.py
tkplanes/kplanes/: LimitGradLayer.py  kplanes.py  kplanes_configs.py~  kplanes_field.py
tkplanes/model_components/: ray_generators.py  renderers.py
tools/: make_mask_center_array.py  make_masks.py
